--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,34 @@
 {
-    "name": "My App PWA",
-    "short_name": "My App PWA",
-    "description": "Test PWA application",
-    "icons": [
-        {
-            "src": "/android-chrome-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/android-chrome-256x256.png",
-            "sizes": "256x256",
-            "type": "image/png"
-        }
-    ],
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#fff",
-    "theme_color": "#4CAF50"
-  }
+  "name": "My App PWA",
+  "short_name": "My App PWA",
+  "description": "Test PWA application",
+  "icons": [
+    {
+      "src": "images/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "images/android-chrome-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "images/screen-645x376.png",
+      "sizes": "645x376",
+      "type": "image/png",
+      "form_factor": "wide"
+    },
+    {
+      "src": "images/image-359x659.png",
+      "sizes": "359x659",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#fff",
+  "theme_color": "#4CAF50"
+}
