--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,7 @@
     }
   ],
   "start_url": "/",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#fff",
   "theme_color": "#4CAF50"
 }
